@@ -119,7 +119,7 @@ namespace Mono.Unix {
 			base.Refresh ();
 		}
 
-		[Obsolete ("The return type of this method will change in the next release")]
+		[Obsolete ("The return type will change to Mono.Unix.Native.Dirent[] in the next release")]
 		public Dirent[] GetEntries ()
 		{
 			IntPtr dirp = Syscall.opendir (FullPath);
@@ -160,7 +160,7 @@ namespace Mono.Unix {
 			return (Dirent[]) entries.ToArray (typeof(Dirent));
 		}
 
-		[Obsolete ("The return type of this method will change in the next release")]
+		[Obsolete ("The return type will change to Mono.Unix.Native.Dirent[] in the next release")]
 		public Dirent[] GetEntries (Regex regex)
 		{
 			IntPtr dirp = Syscall.opendir (FullPath);
@@ -197,7 +197,7 @@ namespace Mono.Unix {
 			return (Dirent[]) entries.ToArray (typeof(Dirent));
 		}
 
-		[Obsolete ("The return type of this method will change in the next release")]
+		[Obsolete ("The return type will change to Mono.Unix.Native.Dirent[] in the next release")]
 		public Dirent[] GetEntries (string regex)
 		{
 			Regex re = new Regex (regex);
